<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hdmapping_lio</name>
  <version>0.1.0</version>
  <description>ROS2 wrapper for HDMapping LiDAR Inertial Odometry</description>
  <maintainer email="januszbedkowski@gmail.com">Janusz Bedkowski</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <build_depend>libtbb-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
